Fix some modal things from review
- Submit button is primary
- Cancel button should be secondary
- X is moving when hover over it, can border go around without shifting
- text of submit/cancel is too close to the top of the button -potentially a bug
- typo for "programatic" - should be programmatic
- change the demo: modal on top of modal - next to cancel, add button, something like "submit and get error msg"
- change font-weight to 400 (instead of 300), on buttons as well
- safari bug - can tab to background from modal window
- text field should not have prompts
- should follow capitalization and punctuation rules - excess use of exclamation mark

--- a/src/core/modal/_modal.scss
+++ b/src/core/modal/_modal.scss
@@ -63,6 +63,8 @@
 				}
 				height: $modal-close-icon-svg-height;
 				width: $modal-close-icon-svg-width;
+				margin-left: auto;
+				margin-right: auto;
 			}
 			&:hover, &:focus {
 				border: $modal-close-icon-border $modal-close-icon-border-color;
