--- a/src/core/variables/_variables.scss
+++ b/src/core/variables/_variables.scss
@@ -42,9 +42,9 @@ $font-path: 'fonts/' !default;
 $font-family-base:       "Helvetica Neue for IBM", Helvetica, Arial, sans-serif !default;
 
 
-$font-light:            100 !default; // Helvetica light
-$font-roman:            300 !default; // Helvetica roman
-$font-roman-bold:       400 !default; // Helvetica roman bold
+$font-light:            300 !default; // Helvetica light
+$font-roman:            400 !default; // Helvetica roman
+$font-roman-bold:       500 !default; // Helvetica roman bold
 $font-medium:           500 !default; // Helvetica Medium
 $font-bold:             700 !default; // Helvetica Bold
 
